fixed listing modal overflow issue

--- a/react-app/src/components/ListingModal/ListingModal.css
+++ b/react-app/src/components/ListingModal/ListingModal.css
@@ -236,10 +236,13 @@
 }
 
 .listing-addl-info-container {
-  display:flex;
+  width: 100%;
+  height: 8%;
+  display: flex;
   justify-content: center;
   align-items: center;
   padding-left: 2%;
+  overflow-x: auto;
 }
 
 .listing-info-nav-item:hover {
@@ -293,6 +296,7 @@
   flex-direction: column;
   padding-left: 2%;
   width: 100%;
+  height: 100%;
 }
 
 .overview-container {
